# rust-web-service

./: compose.yaml  readme.md
backend/: Cargo.toml
backend/nft-app-data/: Cargo.toml
backend/nft-app-data-deploy/: Cargo.toml
backend/nft-app-data-deploy/migrations/: 0002_create-nfts_down.sql  0002_create-nfts_up.sql
backend/nft-app-data-deploy/src/: lib.rs
backend/nft-app-data/src/: lib.rs
backend/nft-app-model/: Cargo.toml
backend/nft-app-model/src/: lib.rs
backend/nft-app-service/src/: main.rs
docs/: api-endpoints.md  database-model.md
