[package]
name = "nft-app-data"
version = "0.1.0"
authors = ["Juan Obligado <juan.obligado@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nft-app-model = { path = "../nft-app-model" }
env_logger = "^0.8"
log = "^0.4"
serde = "1.0"
serde_json = "1.0"
